plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.capstoneecho'
version = '0.0.1-SNAPSHOT'
description = 'ECHO_back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    // 운영 의존성: 인프라 starter + 도메인에서 쓰는 외부 라이브러리.
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    // RestClient + MultipartBodyBuilder 가 reactive-streams Publisher 인터페이스를
    // 참조하지만 starter-webmvc 가 transitive 로 끌어오지 않아 명시 추가.
    implementation 'org.reactivestreams:reactive-streams:1.0.4'

    // JWT 토큰 발급 / 검증.
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Lombok 보일러플레이트 제거 (DTO / Entity 의 getter / builder).
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // 런타임 DB. 개발 / 테스트는 H2, 운영은 MySQL 을 쓸 수 있도록 둘 다 둔다.
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // 테스트 의존성. JUnit5 / MockMvc / AssertJ / restdocs.
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-restdocs'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

// Java 25 클래스 파일 (major 69) 은 JaCoCo 0.8.13 이상이 필요. Gradle 9.4 가
// 기본으로 끌고 오는 버전이 더 낮아 toolVersion 을 명시 고정한다.
jacoco {
    toolVersion = "0.8.13"
}

// 커버리지 산정에서 제외할 패턴. Lombok 생성 코드 (DTO / Entity), 설정 글루,
// 부트스트랩 클래스는 실제 로직 비중이 적어 커버리지에 잡혀도 의미가 적다.
def jacocoExcludePatterns = [
        '**/EchoBackApplication.*',
        '**/dto/**',
        '**/entity/**',
        '**/global/config/**',
]

tasks.named('jacocoTestReport') {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

// classDirectories 의 source set 와이어링이 끝난 시점에 제외 패턴을 적용해야 하므로
// project.afterEvaluate 안에서 처리한다.
project.afterEvaluate {
    jacocoTestReport.classDirectories.setFrom(
            files(jacocoTestReport.classDirectories.files.collect {
                fileTree(dir: it, exclude: jacocoExcludePatterns)
            })
    )
}

// LLM 디버그 CLI. prompts.yaml 검증과 Gemini 응답 비교에 사용한다.
// 패키지는 도메인 주도 재배치 후 external/llm 으로 이동했다.
tasks.register('runPromptTemplates', JavaExec) {
    group = 'application'
    description = 'prompts.yaml 을 읽어 PromptTemplates 결과를 콘솔에 출력'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.capstoneecho.echo_back.external.llm.PromptTemplatesRunner'
}

tasks.register('runLlmFeedback', JavaExec) {
    group = 'application'
    description = 'CLI 인자로 받은 입력을 GeminiLlmFeedbackGenerator 에 흘려 LLM 응답 출력'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.capstoneecho.echo_back.external.llm.LlmFeedbackRunner'
}
